--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 .DS_Store
 _book
 _bookdown_files
-bookclub-BOOKABBR.Rmd
-bookclub-BOOKABBR.knit.md
-bookclub-BOOKABBR_files
+bookclub-shinyui.Rmd
+bookclub-shinyui.knit.md
+bookclub-shinyui_files
 libs
 *.html
