--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Outstanding User Interfaces with Shiny Book Club
 Version: 0.0.1
 Authors@R: c(
   person(
-    "R4DS Online Learning Community",
+    "Data Science Learning Community",
     email = "rfordatasci@gmail.com",
     role = c("aut", "cre", "cph")
   )
